fix: issue with today circle on Firefox

--- a/src/less/theme.less
+++ b/src/less/theme.less
@@ -72,11 +72,6 @@ mwl-calendar {
     font-size: 1.2em;
     font-weight: normal;
     opacity: 0.5;
-    transition: all .3s ease-in-out;
-    -webkit-transition: all .1s ease-in-out;
-    -moz-transition: all .1s ease-in-out;
-    -ms-transition: all .1s ease-in-out;
-    -o-transition: all .1s ease-in-out;
     margin-top: 15px;
     margin-right: 15px;
   }
